x/programs/rust/sdk_macros/tests/ui/receiver.rs
use sdk_macros::public;

struct Foo;

impl Foo {
    #[public]
    pub fn test(&self) {}
}

fn main() {}
